--- a/Ch 02. 텍스트 전처리.ipynb
+++ b/Ch 02. 텍스트 전처리.ipynb
@@ -31,24 +31,22 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\sk8er\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data]     C:\\Users\\ing06\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n",
       "[nltk_data] Downloading package webtext to\n",
-      "[nltk_data]     C:\\Users\\sk8er\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package webtext is already up-to-date!\n",
+      "[nltk_data]     C:\\Users\\ing06\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\webtext.zip.\n",
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\sk8er\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\ing06\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\sk8er\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data]     C:\\Users\\ing06\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n",
       "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\sk8er\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n",
+      "[nltk_data]     C:\\Users\\ing06\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n",
       "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\sk8er\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\omw-1.4.zip.\n"
+      "[nltk_data]     C:\\Users\\ing06\\AppData\\Roaming\\nltk_data...\n"
      ]
     },
     {
@@ -91,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +239,7 @@
    ],
    "source": [
     "import re\n",
-    "re.findall(\"[abc]\", \"How are you, boy?\")"
+    "re.findall(\"[abc]\", \"How are you, boy?\")      # a, b, c 중 하나라도 일치하는 문자를 가져옴, 여기서는 are의 a와 boy의 b"
    ]
   },
   {
@@ -261,7 +259,7 @@
     }
    ],
    "source": [
-    "re.findall(\"[0123456789]\", \"3a7b5c9d\")"
+    "re.findall(\"[0123456789]\", \"3a7b5c9d\")       # [0-9]와 동일, 0~9까지 숫자 중 하나라도 일치하면 가져옴 -> 숫자 추출"
    ]
   },
   {
@@ -281,7 +279,7 @@
     }
    ],
    "source": [
-    "re.findall(\"[\\w]\", \"3a 7b_ '.^&5c9d\")"
+    "re.findall(\"[\\w]\", \"3a 7b_ '.^&5c9d\")         # [a-zA-Z0-9_]와 동일, 즉 알파벳, 숫자, 밑줄 추출"
    ]
   },
   {
@@ -301,7 +299,7 @@
     }
    ],
    "source": [
-    "re.findall(\"[_]+\", \"a_b, c__d, e___f\")"
+    "re.findall(\"[_]+\", \"a_b, c__d, e___f\")        # 밑줄(_)이 1개 이상인 경우"
    ]
   },
   {
@@ -321,7 +319,7 @@
     }
    ],
    "source": [
-    "re.findall(\"[\\w]+\", \"How are you, boy?\")"
+    "re.findall(\"[\\w]+\", \"How are you, boy?\")      # 공백 단위로 단어 추출"
    ]
   },
   {
@@ -341,12 +339,12 @@
     }
    ],
    "source": [
-    "re.findall(\"[o]{2,4}\", \"oh, hoow are yoooou, boooooooy?\")"
+    "re.findall(\"[o]{2,4}\", \"oh, hoow are yoooou, boooooooy?\")           # o가 2번~4번 등장하는 경우 추출"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -379,13 +377,14 @@
     }
    ],
    "source": [
-    "tokenizer = RegexpTokenizer(\"[\\w]+\") \n",
-    "print(tokenizer.tokenize(\"Sorry, I can't go there.\"))"
+    "tokenizer = RegexpTokenizer(\"[\\w]+\")            # ' 제외\n",
+    "print(tokenizer.tokenize(\"Sorry, I can't go there.\"))        \n",
+    "# can't가 can과 t로 쪼개짐"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -397,6 +396,8 @@
     }
    ],
    "source": [
+    "# 주어진 단어를 소문자로 바꾸고\n",
+    "# '를 포함해 세 글자 이상의 단어만 추출\n",
     "text1 = \"Sorry, I can't go there.\"\n",
     "tokenizer = RegexpTokenizer(\"[\\w']{3,}\") \n",
     "print(tokenizer.tokenize(text1.lower()))"
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -437,14 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'is', \"needn't\", 'couldn', 'o', 'through', \"didn't\", 'up', \"won't\", \"weren't\", 'they', 'wasn', \"shan't\", 'off', 'above', 'if', 'his', 'or', 'their', 'it', 'yours', 'on', 'as', 'for', 'during', 'yourself', 'am', 'because', 'before', 'theirs', 'be', \"mustn't\", 'and', 'such', 'an', 'here', 'to', \"couldn't\", \"doesn't\", 'hers', 've', 'do', 'did', 'ours', 'herself', 'isn', 'by', 'yourselves', 'had', 'were', 'll', 'her', 'until', 'those', 'ma', 'myself', 'between', 'with', 'doesn', \"shouldn't\", 'him', 'in', 'while', 'own', 'this', 'we', 'having', 'out', \"hadn't\", 'all', 'won', 'there', 'm', 'same', \"wasn't\", 'our', 'not', 'any', 'what', 'does', \"you're\", 'then', 'who', 'these', 'once', 'now', \"hasn't\", 'shan', 'them', 'further', 'has', \"don't\", 'don', 'your', 'few', 'd', 'didn', 'into', 'at', \"you've\", 'below', 'himself', 'been', \"wouldn't\", 'some', 'how', 'more', 'each', 'ain', \"she's\", 'where', 'only', 'have', 'the', 're', 'needn', 'weren', 'are', 'whom', 'haven', 'most', 'me', \"that'll\", 'under', 's', 'wouldn', 't', 'can', 'mightn', 'you', 'against', 'too', 'from', 'my', 'just', 'that', \"you'll\", 'again', 'hasn', 'itself', 'a', 'doing', 'was', \"aren't\", \"it's\", \"haven't\", 'should', \"isn't\", 'its', 'aren', 'down', 'i', 'but', 'when', 'no', \"you'd\", 'themselves', 'over', 'mustn', 'about', 'being', 'so', \"should've\", 'ourselves', 'why', 'he', 'other', 'nor', 'of', 'she', 'after', 'hadn', 'will', 'y', 'shouldn', 'very', 'which', 'than', \"mightn't\", 'both'}\n"
+      "{'those', 'our', 'of', 'off', \"you'd\", 'with', \"hasn't\", 'such', \"shan't\", 'mightn', \"isn't\", \"won't\", 'up', 'where', 'how', 'out', 'does', 'haven', 'your', 'were', \"you're\", 'between', 'to', 'd', 'before', \"should've\", 'just', 'his', 'isn', 'no', \"haven't\", 'once', 'mustn', 've', 'is', 'some', 'than', 'while', 're', \"you'll\", \"she's\", 'any', 'himself', 'its', 'ain', 'further', 's', 'an', 'weren', 't', 'these', 'below', 'each', 'wasn', 'under', \"needn't\", 'it', 'has', 'hadn', 'we', 'have', 'whom', 'above', 'will', 'should', 'you', 'this', 'until', 'from', \"mustn't\", \"didn't\", 'a', 'then', 'herself', 'her', 'was', \"mightn't\", 'can', 'didn', 'nor', 'own', 'y', 'won', 'through', 'll', \"that'll\", 'them', \"it's\", \"doesn't\", 'all', 'doesn', 'both', 'wouldn', 'or', 'only', 'hasn', 'don', 'did', 'on', 'against', 'other', 'he', 'after', 'do', \"you've\", 'themselves', 'am', 'down', \"don't\", 'couldn', 'being', 'yours', 'into', 'o', \"hadn't\", 'doing', 'not', 'here', 'so', 'very', 'itself', 'which', 'at', 'me', 'about', 'there', \"shouldn't\", 'because', 'few', 'over', 'ourselves', 'm', 'their', 'theirs', 'by', 'the', 'if', 'she', 'who', 'had', \"wasn't\", 'they', 'why', \"weren't\", 'hers', 'for', 'too', 'yourself', 'what', 'but', \"aren't\", 'shan', 'my', \"wouldn't\", 'that', 'i', 'yourselves', 'as', 'ours', 'ma', 'needn', 'him', 'having', 'and', 'again', 'when', 'been', 'be', 'myself', 'most', 'are', 'shouldn', 'in', 'now', 'aren', 'during', \"couldn't\", 'more', 'same'}\n"
      ]
     }
    ],
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -483,26 +484,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cook cookeri cookbook\n"
+      "cook cookeri cookbook\n",
+      "goe addict hol'up\n"
      ]
     }
    ],
    "source": [
+    "# 포터 스테머 알고리즘\n",
     "from nltk.stem import PorterStemmer\n",
     "stemmer = PorterStemmer()\n",
-    "print(stemmer.stem('cooking'), stemmer.stem('cookery'), stemmer.stem('cookbooks'))"
+    "print(stemmer.stem('cooking'), stemmer.stem('cookery'), stemmer.stem('cookbooks'))\n",
+    "print(stemmer.stem('goes'), stemmer.stem('addiction'), stemmer.stem('hol\\'up'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -526,21 +530,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cook cookery cookbook\n"
+      "cook cookery cookbook\n",
+      "goe addict hol'up\n"
      ]
     }
    ],
    "source": [
+    "# 랭가스터 스테머 알고리즘\n",
     "from nltk.stem import LancasterStemmer\n",
     "stemmer = LancasterStemmer()\n",
-    "print(stemmer.stem('cooking'), stemmer.stem('cookery'), stemmer.stem('cookbooks'))"
+    "print(stemmer.stem('cooking'), stemmer.stem('cookery'), stemmer.stem('cookbooks'))\n",
+    "print(stemmer.stem('goes'), stemmer.stem('addiction'), stemmer.stem('hol\\'up'))"
    ]
   },
   {
@@ -552,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +577,7 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "print(lemmatizer.lemmatize('cooking'))\n",
-    "print(lemmatizer.lemmatize('cooking', pos='v')) #품사를 지정\n",
+    "print(lemmatizer.lemmatize('cooking', pos='v')) #pos: 품사를 지정, 여기서는 동사 즉, 동사인 경우 cook을 리턴\n",
     "print(lemmatizer.lemmatize('cookery'))\n",
     "print(lemmatizer.lemmatize('cookbooks'))"
    ]
@@ -624,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -708,10 +715,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# nltk로는 한글 품사 태깅을 제대로 수행할 수 없음\n",
     "sentence = '''절망의 반대가 희망은 아니다.\n",
     "어두운 밤하늘에 별이 빛나듯\n",
     "희망은 절망 속에 싹트는 거지\n",
@@ -722,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -810,7 +818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
