ch2-텍스트 전처리 완료

--- a/ch2_텍스트전처리_연습/practice1.ipynb
+++ b/ch2_텍스트전처리_연습/practice1.ipynb
@@ -6,13 +6,11 @@
    "metadata": {},
    "source": [
     "# 텍스트 전처리(Text Preprocesing)\n",
-    "### 1) 정제(Cleaning): 분석에 불필요한 노이즈 제거(noise removal)  \n",
-    "### &nbsp; &nbsp; ex) 불용어(stopwords) 제거 <br>\n",
-    "### 2) 토큰화(Tokenization): 주어진 텍스트를 토큰으로 나누는 작업\n",
-    "### &nbsp; &nbsp; ex) **단어 토큰화(word tokenization)**, 문장 토큰화 <br>\n",
-    "### 3) 정규화: 같은 의미를 가진 다른 형태의 단어들을 통일시키는 작업\n",
-    "### &nbsp; &nbsp; - 어간 추출(Stemming), 표제어 추출(Lemmatization)  <br>\n",
-    "### 4) 품사 태깅: 토큰화한 단어에 대해 품사를 파악해 부착하는 것을 의미"
+    "---------------------\n",
+    "## 1) 정제(Cleaning): 분석에 불필요한 노이즈 제거(noise removal)  \n",
+    "### &nbsp; &nbsp; ex) 불용어(stopwords) 제거 <br/>\n",
+    "## 2) 토큰화(Tokenization): 주어진 텍스트를 토큰으로 나누는 작업\n",
+    "### &nbsp; &nbsp; ex) **단어 토큰화(word tokenization)**, 문장 토큰화 <br/>"
    ]
   },
   {
@@ -52,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bdcfbe89",
    "metadata": {},
    "outputs": [
@@ -206,12 +204,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1376cfca",
+   "metadata": {},
+   "source": [
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "## 3) 정규화: 같은 의미를 가진 다른 형태의 단어들을 통일시키는 작업\n",
+    "### &nbsp; &nbsp; - 어간 추출(Stemming): 단어의 형태가 변화할 때, 변하지 않는 부분(어간)을 추출\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp; 따라서 어간 추출 결과는 사전에 등록되지 않은 단어일 확률이 높음(표제어 추출과 차이) <br/>\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp; ex) 가다, 간다, 갔다 -> '가' &nbsp; &nbsp; &nbsp; 작다, 작고, 작으니 -> '작' \n",
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "### &nbsp; &nbsp; - 표제어 추출(Lemmatization): 단어를 기본형으로 변환하는 것\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp; ex) cooking -> cook(동사)\n",
+    "<br/>\n",
+    "<br/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d746741d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cook cookeri cookbook\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 어간 추출(Stemming)\n",
+    "# 1. 포터 스테머\n",
+    "from nltk.stem import PorterStemmer\n",
+    "stemmer = PorterStemmer()\n",
+    "print(stemmer.stem('cooking'), stemmer.stem('cookery'), stemmer.stem('cookbooks'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ab7a03b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "토큰화:  ['[', 'The', 'Tragedie', 'of', 'Macbeth', 'by', 'William', 'Shakespeare', '1603', ']', 'Actus', 'Primus', '.', 'Scoena', 'Prima', '.', 'Thunder', 'and', 'Lightning', '.', 'Enter', 'three', 'Witches', '.', '1', '.', 'When', 'shall', 'we', 'three', 'meet', 'againe', '?', 'In', 'Thunder', ',', 'Lightning', ',', 'or', 'in', 'Raine', '?', '2', '.', 'When', 'the', 'Hurley-burley', \"'s\", 'done', ',', 'When', 'the', 'Battaile', \"'s\", 'lost', ',', 'and', 'wonne', '3', '.', 'That', 'will', 'be', 'ere', 'the', 'set', 'of', 'Sunne', '1', '.', 'Where', 'the', 'place', '?', '2', '.', 'Vpon', 'the', 'Heath', '3', '.', 'There', 'to', 'meet', 'with', 'Macbeth', '1', '.', 'I', 'come', ',', 'Gray-Malkin', 'All', '.', 'Padock', 'calls', 'anon', ':', 'faire', 'is', 'foule', ',', 'and', 'foule', 'is', 'faire', ',', 'Houer', 'through']\n",
+      "어간 추출:  ['[', 'the', 'tragedi', 'of', 'macbeth', 'by', 'william', 'shakespear', '1603', ']', 'actu', 'primu', '.', 'scoena', 'prima', '.', 'thunder', 'and', 'lightn', '.', 'enter', 'three', 'witch', '.', '1', '.', 'when', 'shall', 'we', 'three', 'meet', 'again', '?', 'in', 'thunder', ',', 'lightn', ',', 'or', 'in', 'rain', '?', '2', '.', 'when', 'the', 'hurley-burley', \"'s\", 'done', ',', 'when', 'the', 'battail', \"'s\", 'lost', ',', 'and', 'wonn', '3', '.', 'that', 'will', 'be', 'ere', 'the', 'set', 'of', 'sunn', '1', '.', 'where', 'the', 'place', '?', '2', '.', 'vpon', 'the', 'heath', '3', '.', 'there', 'to', 'meet', 'with', 'macbeth', '1', '.', 'i', 'come', ',', 'gray-malkin', 'all', '.', 'padock', 'call', 'anon', ':', 'fair', 'is', 'foul', ',', 'and', 'foul', 'is', 'fair', ',', 'houer', 'through']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = doc_macbeth[:500]\n",
+    "\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "tokens = word_tokenize(sample)\n",
+    "print(\"토큰화: \", tokens)\n",
+    "stem = [stemmer.stem(token) for token in tokens]\n",
+    "print(\"어간 추출: \", stem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3078504d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cook cookery cookbook\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 랭카스터 스테머\n",
+    "from nltk.stem import LancasterStemmer\n",
+    "\n",
+    "stemmer = LancasterStemmer()\n",
+    "\n",
+    "print(stemmer.stem('cooking'), stemmer.stem('cookery'), stemmer.stem('cookbooks'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5a6faf46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cooking\n",
+      "cook\n",
+      "cookery\n",
+      "cookbook\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 표제어 추출(Lemmatization)\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "print(lemmatizer.lemmatize('cooking'))\n",
+    "print(lemmatizer.lemmatize('cooking', pos='v'))   # 품사 지정, v는 동사\n",
+    "print(lemmatizer.lemmatize('cookery'))\n",
+    "print(lemmatizer.lemmatize('cookbooks'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d080b569",
+   "metadata": {},
+   "source": [
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "## 4) 품사 태깅: 앞서 토큰화한 단어에 대해 품사를 부착하는 것 <br/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a2f235d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('[', 'IN'), ('The', 'DT'), ('Tragedie', 'NNP'), ('of', 'IN'), ('Macbeth', 'NNP'), ('by', 'IN'), ('William', 'NNP'), ('Shakespeare', 'NNP'), ('1603', 'CD'), (']', 'NNP'), ('Actus', 'NNP'), ('Primus', 'NNP'), ('.', '.'), ('Scoena', 'NNP'), ('Prima', 'NNP'), ('.', '.'), ('Thunder', 'NNP'), ('and', 'CC'), ('Lightning', 'NNP'), ('.', '.'), ('Enter', 'NNP'), ('three', 'CD'), ('Witches', 'NNP'), ('.', '.'), ('1', 'CD'), ('.', '.'), ('When', 'WRB'), ('shall', 'MD'), ('we', 'PRP'), ('three', 'CD'), ('meet', 'FW'), ('againe', 'NN'), ('?', '.'), ('In', 'IN'), ('Thunder', 'NNP'), (',', ','), ('Lightning', 'NNP'), (',', ','), ('or', 'CC'), ('in', 'IN'), ('Raine', 'NNP'), ('?', '.'), ('2', 'CD'), ('.', '.'), ('When', 'WRB'), ('the', 'DT'), ('Hurley-burley', 'NNP'), (\"'s\", 'POS'), ('done', 'VBN'), (',', ','), ('When', 'WRB'), ('the', 'DT'), ('Battaile', 'NNP'), (\"'s\", 'POS'), ('lost', 'NN'), (',', ','), ('and', 'CC'), ('wonne', '$'), ('3', 'CD'), ('.', '.'), ('That', 'DT'), ('will', 'MD'), ('be', 'VB'), ('ere', 'RB'), ('the', 'DT'), ('set', 'NN'), ('of', 'IN'), ('Sunne', 'NNP'), ('1', 'CD'), ('.', '.'), ('Where', 'WRB'), ('the', 'DT'), ('place', 'NN'), ('?', '.'), ('2', 'CD'), ('.', '.'), ('Vpon', 'VB'), ('the', 'DT'), ('Heath', 'NNP'), ('3', 'CD'), ('.', '.'), ('There', 'EX'), ('to', 'TO'), ('meet', 'VB'), ('with', 'IN'), ('Macbeth', 'NNP'), ('1', 'CD'), ('.', '.'), ('I', 'PRP'), ('come', 'VBP'), (',', ','), ('Gray-Malkin', 'NNP'), ('All', 'NNP'), ('.', '.'), ('Padock', 'NNP'), ('calls', 'VBZ'), ('anon', 'NN'), (':', ':'), ('faire', 'NN'), ('is', 'VBZ'), ('foule', 'JJ'), (',', ','), ('and', 'CC'), ('foule', 'NN'), ('is', 'VBZ'), ('faire', 'JJ'), (',', ','), ('Houer', 'NNP'), ('through', 'IN')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "tokens = word_tokenize(sample)\n",
+    "print(nltk.pos_tag(tokens))   # nltk.pos_tag()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8b852b9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['againe', 'lost', 'be', 'set', 'place', 'Vpon', 'meet', 'anon', 'faire', 'foule', 'foule', 'faire']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 원하는 품사의 단어만 추출\n",
+    "tag_list = ['NN', 'VB', 'JJ']\n",
+    "result = [word for word, tag in nltk.pos_tag(tokens) if tag in tag_list]\n",
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d906aaac",
+   "id": "8be0641f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 한글\n",
+    "sentence = '''절망의 반대가 희망은 아니다. \n",
+    "어두운 밤하늘에 별이 빛나듯 희망은 절망 속에 싹트는 거지 \n",
+    "만약에 우리가 희망함이 적다면 그 누가 세상을 비추어줄까. 정희성, 희망 공부'''\n",
+    "\n",
+    "from konlpy.tag import Okt\n",
+    "t = Okt()\n",
+    "\n",
+    "print('형태소: ')"
+   ]
   }
  ],
  "metadata": {
