--- a/ch2_텍스트전처리_연습/practice1.ipynb
+++ b/ch2_텍스트전처리_연습/practice1.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1376cfca",
+   "id": "4c7b953b",
    "metadata": {},
    "source": [
     "<br/>\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d746741d",
+   "id": "8f378fef",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ab7a03b1",
+   "id": "8c2db789",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3078504d",
+   "id": "73d22281",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5a6faf46",
+   "id": "9ca9ddb0",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d080b569",
+   "id": "54c83a92",
    "metadata": {},
    "source": [
     "<br/>\n",
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a2f235d9",
+   "id": "2efda9ae",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8b852b9d",
+   "id": "0bddb76a",
    "metadata": {},
    "outputs": [
     {
@@ -377,10 +377,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8be0641f",
+   "execution_count": 11,
+   "id": "44bd6302",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "형태소:  ['절망', '의', '반대', '가', '희망', '은', '아니다', '.', '어', '두운', '밤하늘', '에', '별', '이', '빛나듯', '희망', '은', '절망', '속', '에', '싹트는', '거지', '만약', '에', '우리', '가', '희망', '함', '이', '적다면', '그', '누가', '세상', '을', '비추어줄까', '.', '정희성', ',', '희망', '공부']\n",
+      "\n",
+      "명사:  ['절망', '반대', '희망', '어', '두운', '밤하늘', '별', '희망', '절망', '속', '거지', '만약', '우리', '희망', '함', '그', '누가', '세상', '정희성', '희망', '공부']\n",
+      "\n",
+      "품사 태깅:  [('절망', 'Noun'), ('의', 'Josa'), ('반대', 'Noun'), ('가', 'Josa'), ('희망', 'Noun'), ('은', 'Josa'), ('아니다', 'Adjective'), ('.', 'Punctuation'), ('어', 'Noun'), ('두운', 'Noun'), ('밤하늘', 'Noun'), ('에', 'Josa'), ('별', 'Noun'), ('이', 'Josa'), ('빛나듯', 'Verb'), ('희망', 'Noun'), ('은', 'Josa'), ('절망', 'Noun'), ('속', 'Noun'), ('에', 'Josa'), ('싹트는', 'Verb'), ('거지', 'Noun'), ('만약', 'Noun'), ('에', 'Josa'), ('우리', 'Noun'), ('가', 'Josa'), ('희망', 'Noun'), ('함', 'Noun'), ('이', 'Josa'), ('적다면', 'Verb'), ('그', 'Noun'), ('누가', 'Noun'), ('세상', 'Noun'), ('을', 'Josa'), ('비추어줄까', 'Verb'), ('.', 'Punctuation'), ('정희성', 'Noun'), (',', 'Punctuation'), ('희망', 'Noun'), ('공부', 'Noun')]\n"
+     ]
+    }
+   ],
    "source": [
     "### 한글\n",
     "sentence = '''절망의 반대가 희망은 아니다. \n",
@@ -390,8 +402,20 @@
     "from konlpy.tag import Okt\n",
     "t = Okt()\n",
     "\n",
-    "print('형태소: ')"
+    "print(\"형태소: \", t.morphs(sentence))\n",
+    "print()\n",
+    "print(\"명사: \", t.nouns(sentence))\n",
+    "print()\n",
+    "print(\"품사 태깅: \", t.pos(sentence))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "296134db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
