--- a/ch5_BOW기반_문서분류_연습/logistic_regression.ipynb
+++ b/ch5_BOW기반_문서분류_연습/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8de18b69",
+   "id": "e8addd3f",
    "metadata": {},
    "source": [
     "# 로지스틱 회귀분석을 이용한 문서 분류\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c12bcc2b",
+   "id": "6101eac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5b305b02",
+   "id": "a5481db8",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7bed2742",
+   "id": "3987caa9",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d11e5984",
+   "id": "01282a36",
    "metadata": {},
    "source": [
     "## 릿지 회귀(Ridge regression)\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e0553e50",
+   "id": "a33a27fd",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f8f934de",
+   "id": "47da7906",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "3e1c6465",
+   "id": "23f7e3fb",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "fc0a718d",
+   "id": "278fa5ba",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f7e4966b",
+   "id": "b3e12364",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "b829cd18",
+   "id": "9aeaacec",
    "metadata": {},
    "outputs": [
     {
@@ -324,9 +324,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81be5486",
+   "metadata": {},
+   "source": [
+    "## 라쏘 회귀(Lasso regression)\n",
+    "- L1 정규화\n",
+    "- 릿지와 차이점: 특성의 계수가 0에 가까워지면 0으로 바꿈(즉, 해당 특성값 사용X) <br/>\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 이처럼 특성의 수를 줄이는 것을 **특성 선택(feature selection)** 이라고 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "69a39ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score: 0.819\n",
+      "Test score: 0.724\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 라쏘는 로지스틱 회귀분석의 매개변수로 지정\n",
+    "\n",
+    "# c는 릿지에서 alpha와 같은 기능, 근데 alpha와 달리 값이 작아야 더 강한 규제\n",
+    "lasso = LogisticRegression(penalty='l1', solver='liblinear', C=1)  \n",
+    "\n",
+    "lasso.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "print(\"Train score: {:.3f}\".format(lasso.score(X_train_tfidf, y_train)))\n",
+    "print(\"Test score: {:.3f}\".format(lasso.score(X_test_tfidf, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "89bde6e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Used features: 437 out of 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 사용된 특성의 수 출력\n",
+    "print(\"Used features: {}\".format(np.sum(lasso.coef_ != 0)),\n",
+    "     'out of', X_train_tfidf.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "5d0a8fcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alt.atheism: bobby, atheism, atheists, islam, religion, islamic, motto, atheist, satan, vice\n",
+      "comp.graphics: graphics, image, 3d, file, computer, hi, video, files, looking, sphere\n",
+      "sci.space: space, orbit, launch, nasa, spacecraft, flight, moon, dc, shuttle, solar\n",
+      "talk.religion.misc: fbi, christian, christians, christ, order, jesus, children, objective, context, blood\n"
+     ]
+    }
+   ],
+   "source": [
+    "top10_features(lasso, tfidf, news_train.target_names)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46348429",
+   "id": "76a33000",
    "metadata": {},
    "outputs": [],
    "source": []
