ch5-5 한글 리뷰 분류2

--- a/ch5_BOW기반_문서분류_연습/daum_review_classification.ipynb
+++ b/ch5_BOW기반_문서분류_연습/daum_review_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0df518fc",
+   "id": "7e4b0361",
    "metadata": {},
    "source": [
     "# 다음 영화 리뷰 댓글로 영화 제목 예측하기\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1157a566",
+   "id": "ad87335f",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "75e44b1f",
+   "id": "5f02dd48",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ee1f42fa",
+   "id": "83cd28f1",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "28ba3792",
+   "id": "73617c5d",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "38fd768f",
+   "id": "1cd7d9a3",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "831e4011",
+   "id": "c95c05cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2d3018d4",
+   "id": "f4b8a6e9",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "24c04b7d",
+   "id": "d80648ba",
    "metadata": {},
    "outputs": [
     {
@@ -313,6 +313,296 @@
     "    print(c)\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c773b8d3",
+   "metadata": {},
+   "source": [
+    "# 성능 개선 방법\n",
+    "## 1. 토큰화\n",
+    "- 명사, 동사, 형용사로 토큰화\n",
+    "- 형태소 토큰화\n",
+    "\n",
+    "## 2. 다른 분류 방법 사용\n",
+    "- 릿지 회귀, 라쏘 회귀\n",
+    "- 나이브 베이즈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c280c62a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. 토큰화\n",
+    "# 명사, 동사, 형용사를 이용해 토큰화\n",
+    "def twit_tokenizer(text):\n",
+    "    tags = ['Noun', 'Verb', 'Adjective']\n",
+    "    result = []\n",
+    "    \n",
+    "    for word, tag in t.pos(text, norm=True, stem=True):       # 품사 태깅\n",
+    "        if tag in tags:\n",
+    "            result.append(word)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2c6661bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score: 0.784\n",
+      "Test score: 0.712\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tfidf에 토크나이저로 지정\n",
+    "tfidf = TfidfVectorizer(tokenizer=twit_tokenizer, max_features=2000, min_df=5, max_df=0.5)\n",
+    "\n",
+    "X_train_tfidf = tfidf.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf.transform(X_test)\n",
+    "\n",
+    "# 로지스틱 회귀분석\n",
+    "lr = LogisticRegression(max_iter=1000)  \n",
+    "\n",
+    "lr.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "print(\"Train score: {:.3f}\".format(lr.score(X_train_tfidf, y_train)))\n",
+    "print(\"Test score: {:.3f}\".format(lr.score(X_test_tfidf, y_test)))\n",
+    "# 명사 토큰화보다 성능이 향상 0.695 -> 0.712"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f8175b6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['몰입/Noun', '하다/Verb', '없다/Adjective', './Punctuation', '어렵다/Adjective', '생각/Noun', '하다/Verb', '필요없다/Adjective', './Punctuation', '내/Noun', '가/Josa', '전투/Noun', '에/Josa', '참여/Noun', '한/Determiner', '듯/Noun', '손/Noun', '에/Josa', '땀/Noun', '이남/Noun', './Punctuation']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 형태소 단위로 토큰화\n",
+    "def twit_tokenizer2(text):\n",
+    "    result = []\n",
+    "    for word ,tag in t.pos(text, norm=True, stem=True):\n",
+    "        result.append('/'.join([word, tag]))\n",
+    "    return result\n",
+    "\n",
+    "print(twit_tokenizer2(X_train[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "76a178b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score: 0.789\n",
+      "Test score: 0.718\n"
+     ]
+    }
+   ],
+   "source": [
+    "tfidf = TfidfVectorizer(tokenizer=twit_tokenizer2, max_features=2000, min_df=5, max_df=0.5)\n",
+    "\n",
+    "X_train_tfidf = tfidf.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf.transform(X_test)\n",
+    "\n",
+    "# 로지스틱 회귀분석\n",
+    "lr = LogisticRegression(max_iter=1000)  \n",
+    "\n",
+    "lr.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "print(\"Train score: {:.3f}\".format(lr.score(X_train_tfidf, y_train)))\n",
+    "print(\"Test score: {:.3f}\".format(lr.score(X_test_tfidf, y_test)))\n",
+    "# 성능 향상 0.712 -> 0.718"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "eedff624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['몰입/Noun', '하다/Verb', '없다/Adjective', '어렵다/Adjective', '생각/Noun', '하다/Verb', '필요없다/Adjective', '내/Noun', '전투/Noun', '참여/Noun', '듯/Noun', '손/Noun', '땀/Noun', '이남/Noun']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 명사, 동사, 형용사에 품사 태깅을 하면?\n",
+    "def twit_tokenizer3(text):\n",
+    "    tags = ['Noun', 'Verb', 'Adjective']\n",
+    "    result = []\n",
+    "    for word ,tag in t.pos(text, norm=True, stem=True):\n",
+    "        if tag in tags:\n",
+    "            result.append('/'.join([word, tag]))\n",
+    "    return result\n",
+    "\n",
+    "print(twit_tokenizer3(X_train[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ddbbf3aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score: 0.784\n",
+      "Test score: 0.713\n"
+     ]
+    }
+   ],
+   "source": [
+    "tfidf = TfidfVectorizer(tokenizer=twit_tokenizer3, max_features=2000, min_df=5, max_df=0.5)\n",
+    "\n",
+    "X_train_tfidf = tfidf.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf.transform(X_test)\n",
+    "\n",
+    "# 로지스틱 회귀분석\n",
+    "lr = LogisticRegression(max_iter=1000)  \n",
+    "\n",
+    "lr.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "print(\"Train score: {:.3f}\".format(lr.score(X_train_tfidf, y_train)))\n",
+    "print(\"Test score: {:.3f}\".format(lr.score(X_test_tfidf, y_test)))\n",
+    "# 성능이 그닥 나아지진 않음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5545fe46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max alpha 1.600 at max validation score 0.727\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 다른 분류 방법 사용\n",
+    "# 릿지 회귀\n",
+    "\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import RidgeClassifier\n",
+    "\n",
+    "X_train_ridge, X_val_ridge, y_train_ridge, y_val_ridge = train_test_split(\n",
+    "    X_train_tfidf, y_train, test_size=0.2, random_state=42)\n",
+    "\n",
+    "max_score = 0\n",
+    "max_alpha = 0\n",
+    "\n",
+    "# 최적 alpha를 찾기 위해 그리드 서치\n",
+    "for alpha in np.arange(0.1, 10, 0.1):\n",
+    "    \n",
+    "    ridge_clf = RidgeClassifier(alpha=alpha)\n",
+    "    ridge_clf.fit(X_train_ridge, y_train_ridge) \n",
+    "    score = ridge_clf.score(X_val_ridge, y_val_ridge) #검정 데이터셋에 대해 정확도를 측정\n",
+    "    \n",
+    "    if score > max_score:\n",
+    "        max_score = score\n",
+    "        max_alpha = alpha\n",
+    "        \n",
+    "print('Max alpha {:.3f} at max validation score {:.3f}'.format(max_alpha, max_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "644373cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score: 0.807\n",
+      "Test score: 0.726\n",
+      "Train score: 0.703\n",
+      "Test score: 0.696\n",
+      "Used features count: 956 out of 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 찾은 alpha로 릿지 회귀\n",
+    "ridge_clf = RidgeClassifier(alpha=1.6)\n",
+    "ridge_clf.fit(X_train_tfidf, y_train)\n",
+    "print('Train score: {:.3f}'.format(ridge_clf.score(X_train_tfidf, y_train)))\n",
+    "print('Test score: {:.3f}'.format(ridge_clf.score(X_test_tfidf, y_test)))\n",
+    "\n",
+    "# 라쏘 회귀\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import numpy as np\n",
+    "lasso_clf = LogisticRegression(penalty='l1', solver='liblinear', C=0.5)\n",
+    "lasso_clf.fit(X_train_tfidf, y_train)\n",
+    "print('Train score: {:.3f}'.format(lasso_clf.score(X_train_tfidf, y_train)))\n",
+    "print('Test score: {:.3f}'.format(lasso_clf.score(X_test_tfidf, y_test)))\n",
+    "print('Used features count: {}'.format(np.sum(lasso_clf.coef_ != 0)), 'out of', X_train_tfidf.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "eaaa74a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score: 0.768\n",
+      "Test score: 0.704\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 나이브 베이즈\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "NB = MultinomialNB(alpha=0.1)\n",
+    "NB.fit(X_train_tfidf, y_train)\n",
+    "print('Train score: {:.3f}'.format(NB.score(X_train_tfidf, y_train)))\n",
+    "print('Test score: {:.3f}'.format(NB.score(X_test_tfidf, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07520974",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
