--- a/ch8_감성분석_연습/sentiment_analysis.ipynb
+++ b/ch8_감성분석_연습/sentiment_analysis.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "053998ea",
+   "id": "43021da2",
    "metadata": {},
    "source": [
     "# 감성 분석(Sentiment Analysis)\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eceb5394",
+   "id": "7b6c5b56",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b69ea3db",
+   "id": "c5baa7fe",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "008fee58",
+   "id": "8ae49bc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9d759cca",
+   "id": "728e77b1",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e9fd3695",
+   "id": "b7f8edf3",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7830bf9d",
+   "id": "7ebdcefc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "366b483e",
+   "id": "110cba87",
    "metadata": {},
    "outputs": [
     {
@@ -257,8 +257,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "4c129936",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting afinn\n",
+      "  Downloading afinn-0.1.tar.gz (52 kB)\n",
+      "     ---------------------------------------- 52.6/52.6 kB 2.6 MB/s eta 0:00:00\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Building wheels for collected packages: afinn\n",
+      "  Building wheel for afinn (setup.py): started\n",
+      "  Building wheel for afinn (setup.py): finished with status 'done'\n",
+      "  Created wheel for afinn: filename=afinn-0.1-py3-none-any.whl size=53447 sha256=45a2d2caae0e8ad95c5afa30ae909ca44fb12d3243ade2eb072a5fbc80b139a4\n",
+      "  Stored in directory: c:\\users\\ing06\\appdata\\local\\pip\\cache\\wheels\\79\\91\\ee\\8374d9bc8c6c0896a2db75afdfd63d43653902407a0e76cd94\n",
+      "Successfully built afinn\n",
+      "Installing collected packages: afinn\n",
+      "Successfully installed afinn-0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install afinn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f93700e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Afinn 이용한 리뷰 감성분석의 정확도:  0.664\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AFINN을 이용한 감성분석\n",
+    "# -5 ~ 5사이의 극성을 가짐\n",
+    "\n",
+    "from afinn import Afinn\n",
+    "\n",
+    "def sentiment_Afinn(docs):\n",
+    "    afinn = Afinn(emoticons=True)   # 텍스트에 이모티콘이 포함되어 있는 경우\n",
+    "    results = []\n",
+    "    \n",
+    "    for doc in docs:\n",
+    "        if afinn.score(doc) > 0:\n",
+    "            results.append('pos')\n",
+    "        else:\n",
+    "            results.append('neg')\n",
+    "            \n",
+    "    return results\n",
+    "\n",
+    "print(\"# Afinn 이용한 리뷰 감성분석의 정확도: \", accuracy_score(categories, sentiment_Afinn(reviews)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "37f150f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\ing06\\AppData\\Roaming\\nltk_data...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# VADER를 이용한 감성 분석\n",
+    "# 규칙기반 감성 분석 알고리즘 사용\n",
+    "# SNS 텍스트에서 좋은 성능이 나올 수 있도록 개발됨\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('vader_lexicon')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "506497f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Vader을 이용한 리뷰 감성분석의 정확도: 0.635\n"
+     ]
+    }
+   ],
+   "source": [
+    "# VADER의 SentimentIntensityAnalyzer\n",
+    "# 4개의 극성값을 제공 'pos', 'neg', 'neu', 'compound'\n",
+    "# compound: 세 값을 적절히 조합해 -1 ~ 1 사이의 극성값을 제공\n",
+    "\n",
+    "# compound 값이 0.05 이상 -> 긍정, -0.05이하 -> 부정, 그 외는 중립\n",
+    "\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
+    "def sentiment_vader(docs):\n",
+    "    analyser = SentimentIntensityAnalyzer()\n",
+    "    results = []\n",
+    "\n",
+    "    for doc in docs:\n",
+    "        score = analyser.polarity_scores(doc)\n",
+    "        if score['compound'] > 0:\n",
+    "            results.append('pos')\n",
+    "        else:\n",
+    "            results.append('neg')\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "print('# Vader을 이용한 리뷰 감성분석의 정확도:', accuracy_score(categories, sentiment_vader(reviews)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f0814776",
+   "id": "046fe562",
    "metadata": {},
    "outputs": [],
    "source": []
